Name:                diagrams-test
Version:             0.1
Synopsis:            Test suite form diagrams graphics library
Homepage:            http://projects.haskell.org/diagrams
License:             BSD3
License-file:        LICENSE
Author:              Brent Yorgey
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         http://github.com/diagrams/diagrams-test/issues
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.10
Tested-with:         GHC == 7.6.3, GHC == 7.8.1
Source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-test.git

executable diagrams-test
           -- type: exitcode-stdio-1.0
           hs-source-dirs: misc
           main-is: Quickcheck.hs
           build-depends: 
                          base >= 4.2 && < 4.8,
                          diagrams-lib >= 1.2 && < 1.3,
                          QuickCheck >= 2.7 && < 2.8,
                          test-framework >= 0.8 && < 0.9,
                          deepseq >= 1.3 && < 1.4,
                          test-framework-quickcheck2 >= 0.3 && < 0.4,
                          lens >= 4.0 && < 4.5,
                          vector-space-points >= 0.2 && < 0.3,
                          numeric-extras >= 0.0.3 && < 0.1