Name:                diagrams-test
Version:             0.2
Synopsis:            Test suite form diagrams graphics library
Homepage:            http://projects.haskell.org/diagrams
License:             BSD3
License-file:        LICENSE
Author:              Brent Yorgey
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         http://github.com/diagrams/diagrams-test/issues
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.10
Tested-with:         GHC == 7.6.3, GHC == 7.8.1
Source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-test.git

executable diagrams-test
           -- type: exitcode-stdio-1.0
           hs-source-dirs: misc
           main-is: Main.hs
           other-modules: Quickcheck, CSG
           default-language: Haskell2010
           build-depends: 
                          base >= 4.2 && < 4.9,
                          diagrams-lib >= 1.3 && < 1.4,
                          tasty >= 0.10 && < 0.12,
                          tasty-quickcheck >= 0.8 && < 0.9,
                          tasty-hunit,
                          deepseq >= 1.3 && < 1.5,
                          diagrams-solve < 0.2,
                          lens >= 4.6 && < 4.14,
                          vector-space-points >= 0.2 && < 0.3,
                          numeric-extras >= 0.0.3 && < 0.2,
                          linear >= 1.20.1 && < 1.21